--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,21 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Publications
-    url: '#featured'
+ 
+  - name: Research
+    url: '#projects'
     weight: 20
+ 
+  - name: Teaching
+    url: '#teaching'
+    weight: 30
+    
   - name: Contact
     url: '#contact'
-    weight: 30
+    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
- - name: CV
-   url: uploads/resume.pdf
-   weight: 70
+  - name: CV
+    url: uploads/resume.pdf
+    weight: 50
